Fix a tiny horizontal scroll on smaller screens

--- a/static/css/perldotcom.css
+++ b/static/css/perldotcom.css
@@ -293,6 +293,9 @@ code.language-prettyprint .dec { color: #98fb98 } /* decimal         - lightgree
   .follow,#search {
     display: none;
   }
+  #content {
+    overflow: hidden;
+  }
 }
 @media (max-width: 767px) {
   #search {
